src/objects/Discretionary__c/Discretionary__c.object-meta.xml
<CustomObject>
    <label>Discretionary Request</label>
    <nameField>
        <displayFormat>DR-{0}</displayFormat>
        <label>Discretionary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discretionary Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>