src/objects/Discretionary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account should not be &quot;Inactive&quot;</errorMessage>
        <filterItems>
            <field>Account.Customer_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Discretionary Requests</relationshipLabel>
    <relationshipName>Discretionary_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>