src/objects/Discretionary__c/fields/Approver_EmailId__c.field-meta.xml
<CustomField>
    <fullName>Approver_EmailId__c</fullName>
    <label>Approver EmailId</label>
    <type>Email</type>
</CustomField>