src/objects/Discretionary__c/fields/Backup_EmailId__c.field-meta.xml
<CustomField>
    <fullName>Backup_EmailId__c</fullName>
    <label>Backup EmailId</label>
    <type>Email</type>
</CustomField>