src/objects/Discretionary__c/fields/CBT__c.field-meta.xml
<CustomField>
    <fullName>CBT__c</fullName>
    <label>CBT</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBU__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACST-Connected Solutions</fullName>
            </value>
            <value>
                <fullName>ACST-E&amp;I</fullName>
            </value>
            <value>
                <fullName>ACST-Honeywell Quantum Solutions</fullName>
            </value>
            <value>
                <fullName>ACST-RTG</fullName>
            </value>
            <value>
                <fullName>ACST-Sustainability Technologies</fullName>
            </value>
            <value>
                <fullName>Advanced Technology</fullName>
            </value>
            <value>
                <fullName>Aero Level Other</fullName>
            </value>
            <value>
                <fullName>Airbus</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>APAC OEM</fullName>
            </value>
            <value>
                <fullName>ATR EMEAI OEM</fullName>
            </value>
            <value>
                <fullName>ATR Other CBT</fullName>
            </value>
            <value>
                <fullName>BendixKing CBT</fullName>
            </value>
            <value>
                <fullName>BGA Aftermarket</fullName>
            </value>
            <value>
                <fullName>BGA Other CBT</fullName>
            </value>
            <value>
                <fullName>Boeing ATR</fullName>
            </value>
            <value>
                <fullName>Bombardier ATR</fullName>
            </value>
            <value>
                <fullName>Bombardier BGA</fullName>
            </value>
            <value>
                <fullName>Components Business</fullName>
            </value>
            <value>
                <fullName>D&amp;S OTHER CBT</fullName>
            </value>
            <value>
                <fullName>DAA</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>DBL</fullName>
            </value>
            <value>
                <fullName>Defense Channel Partners</fullName>
            </value>
            <value>
                <fullName>DES</fullName>
            </value>
            <value>
                <fullName>DMA</fullName>
            </value>
            <value>
                <fullName>DMM</fullName>
            </value>
            <value>
                <fullName>DSE</fullName>
            </value>
            <value>
                <fullName>DSPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>