src/objects/Discretionary__c/fields/CC_Email_id_from_Disc__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_id_from_Disc__c</fullName>
    <label>CC Email id from Disc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>