src/objects/Discretionary__c/fields/Current_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver__c</fullName>
    <label>Current Approver</label>
    <length>250</length>
    <type>Text</type>
</CustomField>