src/objects/Discretionary__c/fields/Current_ManagerName_Formulae__c.field-meta.xml
<CustomField>
    <fullName>Current_ManagerName_Formulae__c</fullName>
    <formula>Owner__r.Manager.FirstName  &amp;&quot; &quot;&amp;Owner__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current ManagerName Formulae</label>
    <type>Text</type>
</CustomField>