src/objects/Discretionary__c/fields/Discretionary_100k_Budget__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_100k_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discretionary 100k  Budget</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select &apos;Open&apos; Discretionary 100 K Budget</errorMessage>
        <filterItems>
            <field>Campaign_Disc_Budget__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filterItems>
        <infoMessage>Select &apos;Open&apos; Discretionary 100 K Budget</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign_Disc_Budget__c</referenceTo>
    <relationshipLabel>Discretionary Requests</relationshipLabel>
    <relationshipName>Discretionary_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>