src/objects/Discretionary__c/fields/Discretionary_Workflow_Approver__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Workflow_Approver__c</fullName>
    <formula>Owner__r.Discretionary_Workflow_Approver__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discretionary Workflow Approver</label>
    <type>Text</type>
</CustomField>