src/objects/Discretionary__c/fields/Discretionary_Workflow_Approver_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Workflow_Approver_Amount__c</fullName>
    <description>11/29 - previous formula - Text($User.Discretionary_Workflow_Approver_Amount__c)</description>
    <formula>text(Owner__r.Discretionary_Workflow_Approver_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discretionary_Workflow_Approver_Amount</label>
    <type>Text</type>
</CustomField>