src/objects/Discretionary__c/fields/Engineering_lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Engineering_lead_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineering lead Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Engineering lead Contact: Contact should be employee</errorMessage>
        <filterItems>
            <field>Contact.Contact_Is_Employee__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Discretionary Requests (Engineering lead Contact)</relationshipLabel>
    <relationshipName>Discretionary_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>