src/objects/Discretionary__c/fields/Engineering_lead_Contact_email_id__c.field-meta.xml
<CustomField>
    <fullName>Engineering_lead_Contact_email_id__c</fullName>
    <label>Engineering lead Contact email id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>