src/objects/Discretionary__c/fields/Escalate_To_Delegate__c.field-meta.xml
<CustomField>
    <fullName>Escalate_To_Delegate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalate To Delegate</label>
    <type>Checkbox</type>
</CustomField>