src/objects/Discretionary__c/fields/Funding_Reason__c.field-meta.xml
<CustomField>
    <fullName>Funding_Reason__c</fullName>
    <inlineHelpText>Why is the funding needed? What is the Engineering deliverable?</inlineHelpText>
    <label>Funding Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>