src/objects/Discretionary__c/fields/M_PM_Funded_VOC_Project__c.field-meta.xml
<CustomField>
    <fullName>M_PM_Funded_VOC_Project__c</fullName>
    <label>GBE Funded VOC Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>