src/objects/Discretionary__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Discretionary Requests</relationshipLabel>
    <relationshipName>Discretionaries</relationshipName>
    <type>Lookup</type>
</CustomField>