src/objects/Discretionary__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>This is the text field, business requested to have a text field instead a formula field.</description>
    <inlineHelpText>Do not enter Restricted/Classified Program names or Information on this page.</inlineHelpText>
    <label>Program</label>
    <length>80</length>
    <type>Text</type>
</CustomField>