src/objects/Discretionary__c/fields/SC1__c.field-meta.xml
<CustomField>
    <fullName>SC1__c</fullName>
    <label>Sub-Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CBT_Team__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACST T2</fullName>
            </value>
            <value>
                <fullName>Adv Tech T2</fullName>
            </value>
            <value>
                <fullName>Aero Level Other T2</fullName>
            </value>
            <value>
                <fullName>Airbus T2</fullName>
            </value>
            <value>
                <fullName>Airlines Americas T2</fullName>
            </value>
            <value>
                <fullName>Americas AM Other T2</fullName>
            </value>
            <value>
                <fullName>APAC Airlines T2</fullName>
            </value>
            <value>
                <fullName>APAC AM Other</fullName>
            </value>
            <value>
                <fullName>APAC BGA Aftermarket T2</fullName>
            </value>
            <value>
                <fullName>APAC OEM T2</fullName>
            </value>
            <value>
                <fullName>BendixKing CBT T2</fullName>
            </value>
            <value>
                <fullName>BGA AM Americas T2</fullName>
            </value>
            <value>
                <fullName>Boeing ATR T2</fullName>
            </value>
            <value>
                <fullName>Bombardier T2</fullName>
            </value>
            <value>
                <fullName>D&amp;S EMEA OEM T2</fullName>
            </value>
            <value>
                <fullName>D&amp;S OTHER T2</fullName>
            </value>
            <value>
                <fullName>DAA Americas T2</fullName>
            </value>
            <value>
                <fullName>DAP Aftermarket T2</fullName>
            </value>
            <value>
                <fullName>Dassault T2</fullName>
            </value>
            <value>
                <fullName>Defense Channel Partners T2</fullName>
            </value>
            <value>
                <fullName>DES T2</fullName>
            </value>
            <value>
                <fullName>Divest T2</fullName>
            </value>
            <value>
                <fullName>DOEM T2</fullName>
            </value>
            <value>
                <fullName>DSE EMEA T2</fullName>
            </value>
            <value>
                <fullName>DSOE T2</fullName>
            </value>
            <value>
                <fullName>DSPC T2</fullName>
            </value>
            <value>
                <fullName>E&amp;PS OE Other T2</fullName>
            </value>
            <value>
                <fullName>Embraer</fullName>
            </value>
            <value>
                <fullName>Embraer ATR</fullName>
            </value>
            <value>
                <fullName>Embraer BGA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>