src/objects/Discretionary__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Service request number. 
Example: SR-12345</inlineHelpText>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Discretionary Requests</relationshipLabel>
    <relationshipName>Discretionary_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>