src/objects/Discretionary__c/fields/Total_Request_Amount_rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_Request_Amount_rollup__c</fullName>
    <label>Total Request Amount</label>
    <summarizedField>Discretionary_Line_Item__c.Requested_Amount__c</summarizedField>
    <summaryForeignKey>Discretionary_Line_Item__c.Discretionary_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>