src/objects/Discretionary__c/validationRules/Disc_Request_approval_lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Disc_Request_approval_lock</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp;
AND (ISCHANGED(Total_Request_Amount_rollup__c),
OR (ISPICKVAL(Approval_Status__c , &quot;Pending Approval&quot;),
ISPICKVAL(Approval_Status__c , &quot;Rejected&quot;))
)</errorConditionFormula>
    <errorMessage>This Discretionary Request is in approval process you cannot change / add Funding Amount.</errorMessage>
</ValidationRule>