src/objects/Discretionary__c/validationRules/Disc_Request_Fiscal_Year_Current.validationRule-meta.xml
<ValidationRule>
    <fullName>Disc_Request_Fiscal_Year_Current</fullName>
    <active>false</active>
    <errorConditionFormula>and(
or(
ISNEW(), 
ISCHANGED( Fiscal_Year__c )
),
MONTH( TODAY() ) &lt; 12,
value( text( Fiscal_Year__c ) ) &lt;&gt; YEAR( TODAY() )
)</errorConditionFormula>
    <errorDisplayField>Fiscal_Year__c</errorDisplayField>
    <errorMessage>Fiscal year must be current year.</errorMessage>
</ValidationRule>