src/objects/Discretionary__c/validationRules/Disc_Request_Fiscal_Year_Next.validationRule-meta.xml
<ValidationRule>
    <fullName>Disc_Request_Fiscal_Year_Next</fullName>
    <active>false</active>
    <errorConditionFormula>and(
or(
ISNEW(), 
ISCHANGED( Fiscal_Year__c )
),
MONTH( TODAY() ) = 12,
value( text( Fiscal_Year__c ) ) &lt;&gt; YEAR( TODAY() ),
value( text( Fiscal_Year__c ) ) - 1 &lt;&gt; YEAR( TODAY() )
)</errorConditionFormula>
    <errorDisplayField>Fiscal_Year__c</errorDisplayField>
    <errorMessage>Fiscal year must be current year or next year.</errorMessage>
</ValidationRule>