src/objects/Discretionary__c/validationRules/Discretionary_Type_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Discretionary_Type_Check</fullName>
    <active>false</active>
    <description>For an independent discretionary request and for a discretionary request associated to campaign, user can create only, either Direct sell or Demo type discretionary request.</description>
    <errorConditionFormula>IF(OR(AND( Campaign__c  = null,  Opportunity__c = null,not(ispickval( Type__c , &apos;Direct Sell&apos;)), not(ispickval( Type__c , &apos;Demo&apos;))),AND( Campaign__c  &lt;&gt; null, Opportunity__c = null,not(ispickval( Type__c , &apos;Direct Sell&apos;)), not(ispickval( Type__c , &apos;Demo&apos;)))),true,false)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Select &apos; Direct sell&apos; or &apos;Demo&apos; as  Type .</errorMessage>
</ValidationRule>