src/objects/Discretionary__c/validationRules/DnS_No_Quotes_Funding_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>DnS_No_Quotes_Funding_Comments</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
text( SBU__c ) = &quot;D&amp;S&quot;, 
or( 
FIND(&apos;&quot;&apos;,  Funding_Comments__c , 1 )&gt;0 
) 
)</errorConditionFormula>
    <errorDisplayField>Funding_Comments__c</errorDisplayField>
    <errorMessage>No quotes (&quot;&apos;) allowed in text fields including Funding Comments.</errorMessage>
</ValidationRule>