src/objects/Discretionary__c/validationRules/DnS_No_Quotes_Funding_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>DnS_No_Quotes_Funding_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>And( 
 not CONTAINS( $Profile.Name, &quot;API&quot; ), 
 not CONTAINS( $Profile.Name, &quot;Admin&quot; ), 
text( SBU__c ) = &quot;D&amp;S&quot;, 
or( 
FIND(&apos;&quot;&apos;,  Funding_Reason__c , 1 )&gt;0 
) 
)</errorConditionFormula>
    <errorDisplayField>Funding_Reason__c</errorDisplayField>
    <errorMessage>No quotes (&quot;&apos;) allowed in text fields including Funding Reason.</errorMessage>
</ValidationRule>