src/objects/Discretionary__c/validationRules/DnS_No_Quotes_Program.validationRule-meta.xml
<ValidationRule>
    <fullName>DnS_No_Quotes_Program</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
text( SBU__c ) = &quot;D&amp;S&quot;, 
or( 
FIND(&apos;&quot;&apos;,   Program__c , 1 )&gt;0 
) 
)</errorConditionFormula>
    <errorDisplayField>Program__c</errorDisplayField>
    <errorMessage>No quotes (&quot;&apos;) allowed in text fields including Program.</errorMessage>
</ValidationRule>