src/objects/Discretionary__c/validationRules/Estimated_Completion_Date_cant_be_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimated_Completion_Date_cant_be_past</fullName>
    <active>false</active>
    <description>Estimated Completion Date cannot be past date</description>
    <errorConditionFormula>NOT( ISBLANK(Estimated_Completion_Date__c)) &amp;&amp; ( Estimated_Completion_Date__c &lt; DATEVALUE(CreatedDate) || Estimated_Completion_Date__c &lt; TODAY() )</errorConditionFormula>
    <errorDisplayField>Estimated_Completion_Date__c</errorDisplayField>
    <errorMessage>Estimated Completion Date cannot be past date</errorMessage>
</ValidationRule>