src/objects/Discretionary__c/validationRules/OppCampaign_Both_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>OppCampaign_Both_Populated</fullName>
    <active>true</active>
    <description>Discretionary request cannot be associated to both Opportunity and Campaign at the same time.</description>
    <errorConditionFormula>AND(
Campaign__c != Null,
Opportunity__c != Null
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Discretionary request cannot be associated to both Opportunity and Campaign at the same time.</errorMessage>
</ValidationRule>