src/objects/Discretionary__c/validationRules/OppCampaign_Campaign_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>OppCampaign_Campaign_Populated</fullName>
    <active>true</active>
    <description>Discretionary request must be associated to an Opportunity.</description>
    <errorConditionFormula>AND(  
not CONTAINS( $Profile.Name, &quot;API&quot; ), 
not CONTAINS( $Profile.Name, &quot;Admin&quot; ), 
text( SBU__c ) = &quot;D&amp;S&quot;,
text( CBT__c ) &lt;&gt; &quot;HTSI&quot;,
Campaign__c &lt;&gt; Null,
Left( Owner__r.UserRole.Name , 6 ) &lt;&gt; &quot;D&amp;S TS&quot;,  
Left( $UserRole.Name , 6 ) &lt;&gt; &quot;D&amp;S TS&quot;
)</errorConditionFormula>
    <errorDisplayField>Campaign__c</errorDisplayField>
    <errorMessage>Discretionary request must be associated to an Opportunity, not a campaign.</errorMessage>
</ValidationRule>