src/objects/Discretionary__c/validationRules/OppCampaign_One_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>OppCampaign_One_Populated</fullName>
    <active>true</active>
    <description>Discretionary request must be associated to either an Opportunity or a Campaign.</description>
    <errorConditionFormula>AND(  
 not CONTAINS( $Profile.Name, &quot;API&quot; ), 
 not CONTAINS( $Profile.Name, &quot;Admin&quot; ), 
 text( CBT__c ) &lt;&gt; &quot;FM&amp;T&quot;,
 Campaign__c = Null,   
 Opportunity__c = Null,
 Service_Request__c = null
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Discretionary request must be associated to either an Opportunity or a Campaign or a Service Request.</errorMessage>
</ValidationRule>