src/objects/Discretionary__c/listViews/ACSDiscretionaryRequestsApproved.listView-meta.xml
<ListView>
    <fullName>ACSDiscretionaryRequestsApproved</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Type__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>SBU__c</columns>
    <columns>CBT__c</columns>
    <columns>Program__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>ACS Labs</value>
    </filters>
    <label>ACS Discretionary Requests - Approved</label>
</ListView>