src/objects/Discretionary__c/listViews/ACSDiscretionaryRequestsNew.listView-meta.xml
<ListView>
    <fullName>ACSDiscretionaryRequestsNew</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Type__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>SBU__c</columns>
    <columns>CBT__c</columns>
    <columns>Program__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>ACS Labs</value>
    </filters>
    <label>ACS Discretionary Requests - New</label>
</ListView>