src/objects/Discretionary__c/listViews/All_ACS_Discretionary_Requests.listView-meta.xml
<ListView>
    <fullName>All_ACS_Discretionary_Requests</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Funding_Comments__c</columns>
    <columns>Funding_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>ACS Labs</value>
    </filters>
    <label>All ACS Discretionary Requests</label>
</ListView>