src/objects/Discretionary__c/listViews/All_Discretionary.listView-meta.xml
<ListView>
    <fullName>All_Discretionary</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Type__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>SBU__c</columns>
    <columns>CBT__c</columns>
    <columns>Program__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Discretionary</label>
</ListView>