src/objects/Discretionary__c/listViews/All_Discretionary_GTO.listView-meta.xml
<ListView>
    <fullName>All_Discretionary_GTO</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Type__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>SBU__c</columns>
    <columns>CBT__c</columns>
    <columns>Program__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Total_Spent_Amount__c</columns>
    <columns>Current_Approver__c</columns>
    <columns>Approver_EmailId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>GTO</value>
    </filters>
    <label>All Discretionary GTO</label>
    <language>en_US</language>
</ListView>